Fix mobile overflow issues.

--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -140,6 +140,7 @@ i {
   /* background-size: contain; */
   background-repeat: no-repeat;
   background-attachment: fixed;
+  overflow-y: hidden;
 }
 
 .jumbo_text {
@@ -181,6 +182,7 @@ i {
     background-size: 100%;
     text-align: center;
     background-size: cover;
+    overflow-y: scroll;
   }
 
   .jumbo_text {
@@ -194,11 +196,12 @@ i {
 
   .jumbo_text h3 {
     padding-top: 50px;
-    padding-left: 2em;
-    padding-right: 2em;
+    padding-left: 1.5em;
+    padding-right: 1.5em;
     transform: skew(0deg);
     padding: 0;
-    font-size: 20px;
+    font-size: 15px;
+    font-weight: normal;
     padding: 0.5em;
   }
 }
@@ -224,6 +227,7 @@ i {
   background-size: cover;
   background-repeat: no-repeat;
   background-attachment: fixed;
+  overflow-y: hidden;
 }
 
  .about_me_content {
@@ -291,6 +295,7 @@ i {
   #about_me {
     text-align: left;
     background-image: url("../images/About_Me_background_mobile.jpeg");
+    overflow-y: scroll;
   }
 
   #about_me span {
@@ -381,6 +386,7 @@ i {
   background-position: center center;
   background-size: cover;
   background-attachment: fixed;
+  overflow-y: hidden;
 }
 
 #publications h1 {
@@ -425,8 +431,8 @@ i {
   #publications {
     max-width: 100%;
     /*background-repeat: repeat-y;
-    overflow: hidden;
-    overflow-y: scroll;*/
+    overflow: hidden;*/
+    overflow-y: scroll;
   }
 
   #publications h1 {
